# ClawEditor

./: .gitignore  README.md  index.html  package-lock.json  package.json  readme.md  vite.config.ts
integrations/openclaw-gateway/: index.js  openclaw.plugin.json  package.json
skills/: CLAWEDITOR_SKILL_SCHEMA.md
skills/aicorrect/: SKILL.md
skills/aiedit/: SKILL.md
skills/aiimport/: SKILL.md
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/agent/: remoteCommandBridge.ts
src/commands/: registry.ts
src/components/: AgentChatInput.tsx  AgentPanel.tsx  DiffPanel.tsx  EditorPanel.tsx  ExternalFileChangedDialog.tsx  GotoAnything.tsx  GotoLineDialog.tsx  MenuBar.tsx  PdfViewer.tsx  PreviewPanel.tsx  StatusBar.tsx  TabBar.tsx  TextDiffView.tsx  XTerminal.tsx  agentCommandPalette.ts
src/editor/: searchMatchStatus.ts
src/openclaw/: applyIntent.ts  clawEditorV1.ts  deviceAuthPayload.ts  deviceIdentity.ts  extractIntentJson.ts  intentTypes.ts  normalizeCredential.ts  remoteEditorCommand.ts  types.ts  wsChannel.ts
src/skills/: builtinMarkdown.ts  claweditorConfig.ts  completionEngine.ts  resolveSkill.ts  skillRegistry.ts
src/store/: agentStore.ts  editorStore.ts  fileStore.ts
src/types/: index.ts
src/utils/: aiEditExtract.ts  applyFindInEditor.ts  auditLog.ts  contextSnippet.ts  documentOps.ts  exportPdf.ts  fileOps.ts  findCommand.ts  gotoAnythingQuery.ts  gotoLine.ts  gotoLineInput.ts  lineAlignedPartialMerge.ts  (+7 more)
(+1 files in other folders)
